src/validation/tests/snapshots/rusty__validation__tests__literals_validation_tests__literal_cast_with_non_literal.snap
---
source: src/validation/tests/literals_validation_tests.rs
expression: "&diagnostics"
---
error: Expected literal
  ┌─ <internal>:2:13
  │
2 │             INT#[x];
  │             ^^^^^^^ Expected literal


